Support macOS X NS Cocoa xwidget webkit and some fixes
macOS X NS Cocoa xwidget and webkit support:

* configure.ac:
  Allow '--with-xwidgets' for 'nextstep', without X and GTK.
  TODO Now it assumes webkit (webkit2) framework is available
* nextstep/Info.plist.in: Add 'NSAppTransportSecurity' with
  'NSAllowArbitraryLoads'.
* src/Makefile.in src/emacs.c src/nsterm.m src/xwidget.c
  src/xwidget.h: Add member fields for struct xwidget and xwidget_view
  for macosx ns cocoa bottom end, conditional compile.
* src/nsxwidget.h src/nsxwidget.c: Newly added files supporting
  xwidget and webkit for macosx ns cocoa.

Fixes/Changes affecting GTK xwidget also:

* lisp/xwidget.el (xwidget-log xwidget-webkit-mode
  xwidget-window-inside-pixel-width xwidget-window-inside-pixel-height
  xwidget-webkit-new-session):
  Fix typo xwidget log buffer name ' *xwidget-log*' -> '*xwidget-log*'.
  I want no keyboard cursor blinking in xwidget buffer.
  Add utility functions to get emacs window size not including mode-line.
  Insert invisible url in xwidget buffer to help next 'g' to browse url.

--- a/nextstep/templates/Info.plist.in
+++ b/nextstep/templates/Info.plist.in
@@ -675,5 +675,15 @@ along with GNU Emacs.  If not, see <https://www.gnu.org/licenses/>.
 	</array>
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
+        <!-- FIXME: Uncomment for xwidget webkit to browse remote url,
+             but this set no restriction at all.  Consult apple's documentation
+             for detail information about `NSApplicationDefinedMask'. -->
+        <!--
+        <key>NSAppTransportSecurity</key>
+        <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+        </dict>
+        -->
 </dict>
 </plist>
